# django-zapatillas

./: .gitignore  Dockerfile  pyproject.toml
applications/carrito/: admin.py  models.py  serializers.py  urls.py  views.py
applications/carrito/migrations/: 0001_initial.py
applications/producto/: admin.py  apps.py  choices.py  data_limpia.json  filter.py  models.py  productos.json  serializer.py  signals.py  urls.py  utils.py  views.py
applications/producto/migrations/: 0001_initial.py  0002_category_alter_brand_options_product_variantproduct_and_more.py  0003_remove_variantproduct_size.py  0004_variantproduct_size.py  0005_alter_variantproduct_size.py  0006_remove_product_category_variantproduct_created_at_and_more.py  0007_remove_variantproduct_image_and_more.py  0008_brand_image.py  0009_alter_variantproduct_size.py
applications/user/: serializer.py  urls.py  views.py
applications/venta/: admin.py  models.py  serializers.py  urls.py  views.py
applications/venta/migrations/: 0001_initial.py  0002_alter_pedido_total.py  0003_pedido_fecha_modificacion_and_more.py  0004_rename_fecha_pedido_created_and_more.py
shop/: urls.py
shop/settings/: base.py  local.py
